--- a/seasons/src/SeasonDisplay.css
+++ b/seasons/src/SeasonDisplay.css
@@ -10,6 +10,14 @@
     right: 10px;
 }
 
+.season-display.winter i {
+    color: lightskyblue;
+}
+
+.season-display.summer i {
+    color: orangered;
+}
+
 .season-display {
     display: flex;
     justify-content: center;
